// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`form elements form success message 1`] = `
<DocumentFragment>
  <div
    class="css-1rh97lq-PageWrapper css-uliqdc"
  >
    <div
      class="css-1otsgan-FormWrapper"
    >
      <div
        class="css-uliqdc"
      >
        <div
          class="css-16jncbj"
        >
          test
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`form elements form success title 1`] = `
<DocumentFragment>
  <div
    class="css-1rh97lq-PageWrapper css-uliqdc"
  >
    <div
      class="css-1otsgan-FormWrapper"
    >
      <div
        class="css-uliqdc"
      >
        <div
          aria-level="1"
          class="css-1jbmnp7"
          role="heading"
        >
          <div
            class="css-1vyax5l"
          >
            hi
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`single fields checkbox field 1`] = `
<DocumentFragment>
  <div
    class="css-1rh97lq-PageWrapper css-uliqdc"
  >
    <div
      class="css-1otsgan-FormWrapper"
    >
      <form
        autocomplete="off"
        class="form"
        novalidate=""
      >
        <div
          class="css-uliqdc"
        >
          <div
            class="field-container css-jblfrf"
          >
            <label
              class="is-default css-knfhfe"
            >
              <div
                class="css-vurnku"
              >
                <input
                  aria-checked="false"
                  class="css-xyotvu"
                  type="checkbox"
                  value="test"
                />
                <svg
                  aria-hidden="true"
                  class="is-default css-1orewpb"
                  fill="currentcolor"
                  viewBox="0 0 24 24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M19 3H5c-1.11 0-2 .9-2 2v14c0 1.1.89 2 2 2h14c1.11 0 2-.9 2-2V5c0-1.1-.89-2-2-2zm-9 14l-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8l-9 9z"
                  />
                </svg>
                <svg
                  aria-hidden="true"
                  class="is-default css-6gju6b"
                  fill="currentcolor"
                  viewBox="0 0 24 24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
                  />
                </svg>
              </div>
              Label
            </label>
          </div>
        </div>
        <button
          class=" css-fl4xzn"
          type="primary"
        >
          Submit
        </button>
      </form>
    </div>
  </div>
</DocumentFragment>
`;

exports[`single fields checkboxes field 1`] = `
<DocumentFragment>
  <div
    class="css-1rh97lq-PageWrapper css-uliqdc"
  >
    <div
      class="css-1otsgan-FormWrapper"
    >
      <form
        autocomplete="off"
        class="form"
        novalidate=""
      >
        <div>
          <div
            class="css-uliqdc"
          >
            <div
              class="field-container css-jblfrf"
            >
              <label
                class="is-default css-knfhfe"
              >
                <div
                  class="css-vurnku"
                >
                  <input
                    aria-checked="false"
                    class="css-xyotvu"
                    type="checkbox"
                    value=""
                  />
                  <svg
                    aria-hidden="true"
                    class="is-default css-1orewpb"
                    fill="currentcolor"
                    viewBox="0 0 24 24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M19 3H5c-1.11 0-2 .9-2 2v14c0 1.1.89 2 2 2h14c1.11 0 2-.9 2-2V5c0-1.1-.89-2-2-2zm-9 14l-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8l-9 9z"
                    />
                  </svg>
                  <svg
                    aria-hidden="true"
                    class="is-default css-6gju6b"
                    fill="currentcolor"
                    viewBox="0 0 24 24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
                    />
                  </svg>
                </div>
                foo
              </label>
            </div>
          </div>
          <div
            class="css-uliqdc"
          >
            <div
              class="field-container css-jblfrf"
            >
              <label
                class="is-default css-knfhfe"
              >
                <div
                  class="css-vurnku"
                >
                  <input
                    aria-checked="false"
                    class="css-xyotvu"
                    type="checkbox"
                    value=""
                  />
                  <svg
                    aria-hidden="true"
                    class="is-default css-1orewpb"
                    fill="currentcolor"
                    viewBox="0 0 24 24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M19 3H5c-1.11 0-2 .9-2 2v14c0 1.1.89 2 2 2h14c1.11 0 2-.9 2-2V5c0-1.1-.89-2-2-2zm-9 14l-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8l-9 9z"
                    />
                  </svg>
                  <svg
                    aria-hidden="true"
                    class="is-default css-6gju6b"
                    fill="currentcolor"
                    viewBox="0 0 24 24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
                    />
                  </svg>
                </div>
                bar
              </label>
            </div>
          </div>
          <div
            class="css-uliqdc"
          >
            <div
              class="field-container css-jblfrf"
            >
              <label
                class="is-default css-knfhfe"
              >
                <div
                  class="css-vurnku"
                >
                  <input
                    aria-checked="false"
                    class="css-xyotvu"
                    type="checkbox"
                    value=""
                  />
                  <svg
                    aria-hidden="true"
                    class="is-default css-1orewpb"
                    fill="currentcolor"
                    viewBox="0 0 24 24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M19 3H5c-1.11 0-2 .9-2 2v14c0 1.1.89 2 2 2h14c1.11 0 2-.9 2-2V5c0-1.1-.89-2-2-2zm-9 14l-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8l-9 9z"
                    />
                  </svg>
                  <svg
                    aria-hidden="true"
                    class="is-default css-6gju6b"
                    fill="currentcolor"
                    viewBox="0 0 24 24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
                    />
                  </svg>
                </div>
                fuzz
              </label>
            </div>
          </div>
          <div
            class="css-uliqdc"
          >
            <div
              class="field-container css-jblfrf"
            >
              <label
                class="is-default css-knfhfe"
              >
                <div
                  class="css-vurnku"
                >
                  <input
                    aria-checked="false"
                    class="css-xyotvu"
                    type="checkbox"
                    value=""
                  />
                  <svg
                    aria-hidden="true"
                    class="is-default css-1orewpb"
                    fill="currentcolor"
                    viewBox="0 0 24 24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M19 3H5c-1.11 0-2 .9-2 2v14c0 1.1.89 2 2 2h14c1.11 0 2-.9 2-2V5c0-1.1-.89-2-2-2zm-9 14l-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8l-9 9z"
                    />
                  </svg>
                  <svg
                    aria-hidden="true"
                    class="is-default css-6gju6b"
                    fill="currentcolor"
                    viewBox="0 0 24 24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
                    />
                  </svg>
                </div>
                qux
              </label>
            </div>
          </div>
        </div>
        <button
          class=" css-fl4xzn"
          type="primary"
        >
          Submit
        </button>
      </form>
    </div>
  </div>
</DocumentFragment>
`;

exports[`single fields password field 1`] = `
<DocumentFragment>
  <div
    class="css-1rh97lq-PageWrapper css-uliqdc"
  >
    <div
      class="css-1otsgan-FormWrapper"
    >
      <form
        autocomplete="off"
        class="form"
        novalidate=""
      >
        <div
          class="field-container css-jblfrf"
        >
          <label
            class="is-default css-n7nceq"
          >
            Label
          </label>
          <div
            class="is-default css-1vjef0r"
          >
            <input
              class="is-default css-1ljx8fg"
              type="password"
              value=""
            />
          </div>
        </div>
        <button
          class=" css-fl4xzn"
          type="primary"
        >
          Submit
        </button>
      </form>
    </div>
  </div>
</DocumentFragment>
`;

exports[`single fields select field 1`] = `
<DocumentFragment>
  <div
    class="css-1rh97lq-PageWrapper css-uliqdc"
  >
    <div
      class="css-1otsgan-FormWrapper"
    >
      <form
        autocomplete="off"
        class="form"
        novalidate=""
      >
        <div
          class="field-container css-jblfrf"
        >
          <label
            class="is-default css-n7nceq"
          >
            Label
          </label>
          <div
            class="is-default css-1vjef0r"
          >
            <div
              class="css-4cffwv"
            >
              <select
                class="is-default css-1lnj870"
              >
                <option
                  selected=""
                  value=""
                >
                  Select an option
                </option>
                <option
                  value="foo"
                >
                  foo
                </option>
                <option
                  value="bar"
                >
                  bar
                </option>
              </select>
              <svg
                class="css-6ibwe0"
                fill="currentcolor"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M7 10l5 5 5-5z"
                />
              </svg>
            </div>
          </div>
        </div>
        <button
          class=" css-fl4xzn"
          type="primary"
        >
          Submit
        </button>
      </form>
    </div>
  </div>
</DocumentFragment>
`;

exports[`single fields select field with default 1`] = `
<DocumentFragment>
  <div
    class="css-1rh97lq-PageWrapper css-uliqdc"
  >
    <div
      class="css-1otsgan-FormWrapper"
    >
      <form
        autocomplete="off"
        class="form"
        novalidate=""
      >
        <div
          class="field-container css-jblfrf"
        >
          <label
            class="is-default css-n7nceq"
          >
            Label
          </label>
          <div
            class="is-default css-1vjef0r"
          >
            <div
              class="css-4cffwv"
            >
              <select
                class="is-default css-1lnj870"
              >
                <option
                  selected=""
                  value=""
                >
                  Select an option
                </option>
                <option
                  value="foo"
                >
                  foo
                </option>
                <option
                  value="bar"
                >
                  bar
                </option>
              </select>
              <svg
                class="css-6ibwe0"
                fill="currentcolor"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M7 10l5 5 5-5z"
                />
              </svg>
            </div>
          </div>
        </div>
        <button
          class=" css-fl4xzn"
          type="primary"
        >
          Submit
        </button>
      </form>
    </div>
  </div>
</DocumentFragment>
`;

exports[`single fields string field format email 1`] = `
<DocumentFragment>
  <div
    class="css-1rh97lq-PageWrapper css-uliqdc"
  >
    <div
      class="css-1otsgan-FormWrapper"
    >
      <form
        autocomplete="off"
        class="form"
        novalidate=""
      >
        <div
          class="field-container css-jblfrf"
        >
          <label
            class="is-default css-n7nceq"
          >
            Label
          </label>
          <div
            class="is-default css-1vjef0r"
          >
            <input
              class="is-default css-1ljx8fg"
              value=""
            />
          </div>
        </div>
        <button
          class=" css-fl4xzn"
          type="primary"
        >
          Submit
        </button>
      </form>
    </div>
  </div>
</DocumentFragment>
`;

exports[`single fields string field regular 1`] = `
<DocumentFragment>
  <div
    class="css-1rh97lq-PageWrapper css-uliqdc"
  >
    <div
      class="css-1otsgan-FormWrapper"
    >
      <form
        autocomplete="off"
        class="form"
        novalidate=""
      >
        <div
          class="field-container css-jblfrf"
        >
          <label
            class="is-default css-n7nceq"
          >
            Label
          </label>
          <div
            class="is-default css-1vjef0r"
          >
            <input
              class="is-default css-1ljx8fg"
              value=""
            />
          </div>
        </div>
        <button
          class=" css-fl4xzn"
          type="primary"
        >
          Submit
        </button>
      </form>
    </div>
  </div>
</DocumentFragment>
`;

exports[`single fields string field with custom errors as sentence 1`] = `
<DocumentFragment>
  <div
    class="css-1rh97lq-PageWrapper css-uliqdc"
  >
    <div
      class="css-1otsgan-FormWrapper"
    >
      <form
        autocomplete="off"
        class="form"
        novalidate=""
      >
        <div
          class="field-container css-jblfrf"
        >
          <label
            class="is-error css-n7nceq"
          >
            Label
          </label>
          <div
            class="is-error css-1vjef0r"
          >
            <input
              class="is-error css-1ljx8fg"
              value=""
            />
          </div>
          <div
            class="is-error css-hnfg90"
            role="status"
          >
            Should be string, Blah
          </div>
        </div>
        <button
          class="is-focused css-fl4xzn"
          type="primary"
        >
          Submit
        </button>
      </form>
    </div>
  </div>
</DocumentFragment>
`;

exports[`single fields string field with help text 1`] = `
<DocumentFragment>
  <div
    class="css-1rh97lq-PageWrapper css-uliqdc"
  >
    <div
      class="css-1otsgan-FormWrapper"
    >
      <form
        autocomplete="off"
        class="form"
        novalidate=""
      >
        <div
          class="field-container css-jblfrf"
        >
          <label
            class="is-default css-n7nceq"
          >
            Label
          </label>
          <div
            class="is-default css-1vjef0r"
          >
            <input
              class="is-default css-1ljx8fg"
              value=""
            />
          </div>
          <div
            class="is-default css-hnfg90"
            role="status"
          >
            help text
          </div>
        </div>
        <button
          class=" css-fl4xzn"
          type="primary"
        >
          Submit
        </button>
      </form>
    </div>
  </div>
</DocumentFragment>
`;

exports[`single fields string field with markdown errors 1`] = `
<DocumentFragment>
  <div
    class="css-1rh97lq-PageWrapper css-uliqdc"
  >
    <div
      class="css-1otsgan-FormWrapper"
    >
      <form
        autocomplete="off"
        class="form"
        novalidate=""
      >
        <div
          class="field-container css-jblfrf"
        >
          <label
            class="is-default css-n7nceq"
          >
            Test
          </label>
          <div
            class="is-default css-1vjef0r"
          >
            <input
              class="is-default css-1ljx8fg"
              value=""
            />
          </div>
        </div>
        <button
          class=" css-fl4xzn"
          type="primary"
        >
          Submit
        </button>
      </form>
    </div>
  </div>
</DocumentFragment>
`;

exports[`single fields string field with placeholder 1`] = `
<DocumentFragment>
  <div
    class="css-1rh97lq-PageWrapper css-uliqdc"
  >
    <div
      class="css-1otsgan-FormWrapper"
    >
      <form
        autocomplete="off"
        class="form"
        novalidate=""
      >
        <div
          class="field-container css-jblfrf"
        >
          <label
            class="is-default css-n7nceq"
          >
            Label
          </label>
          <div
            class="is-default css-1vjef0r"
          >
            <input
              class="is-default css-1ljx8fg"
              placeholder="placeholder"
              value=""
            />
          </div>
        </div>
        <button
          class=" css-fl4xzn"
          type="primary"
        >
          Submit
        </button>
      </form>
    </div>
  </div>
</DocumentFragment>
`;

exports[`single fields textarea field 1`] = `
<DocumentFragment>
  <div
    class="css-1rh97lq-PageWrapper css-uliqdc"
  >
    <div
      class="css-1otsgan-FormWrapper"
    >
      <form
        autocomplete="off"
        class="form"
        novalidate=""
      >
        <div
          class="field-container css-jblfrf"
          rows="2"
        >
          <label
            class="is-default css-n7nceq"
          >
            Label
          </label>
          <div
            class="is-default css-1vjef0r"
          >
            <textarea
              class="is-default css-8szvo2"
              rows="2"
            />
          </div>
        </div>
        <button
          class=" css-fl4xzn"
          type="primary"
        >
          Submit
        </button>
      </form>
    </div>
  </div>
</DocumentFragment>
`;
